# intelligent-prior-auth

./: .gitignore  Dockerfile  FRONTEND_COMPLETE.md  FRONTEND_SUMMARY.txt  IMPLEMENTATION_COMPLETE.txt  QUICK_START.md  README.md  RUNNING_EVERYTHING.md  SECURITY.md  docker-compose.yml  env.example  gitignore.txt  pyproject.toml  requirements.txt
Documentation/: DATA_GENERATION_GUIDE.md  FRONTEND_SETUP.md  PHASES.md  PROJECT_PLAN.md  QUICKSTART.md  SCALE_UP_SUMMARY.md
app/: __init__.py  main.py
app/core/: __init__.py  config.py  llm_base.py  llm_cerebras.py  llm_client.py  llm_factory.py  llm_openrouter.py  llm_oss.py  logger.py  monitoring.py  prompt_tracker.py  security.py
app/data/: __init__.py  database.py  db_models.py  graph_analytics.py  graph_index.py  mock_loader.py  models.py  vector_index.py
app/modules/: __init__.py  benefit_verification.py  clinical_qualification.py  monitoring_integration.py  orchestrator.py  prior_authorization.py
app/prompts/: clinical_qualification.py  prior_authorization.py
app/routes/: benefit_verification.py  clinical_qualification.py  monitoring_demo.py  orchestrator.py  policy_search.py  prior_authorization.py
app/utils/: __init__.py
frontend/: .gitignore  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  hooks.js
frontend/src/components/: Dashboard.jsx  Navbar.jsx  OrchestratorView.jsx
frontend/src/components/phases/: Phase2View.jsx  Phase3View.jsx  Phase4View.jsx  Phase5View.jsx
frontend/src/components/shared/: Button.jsx  Card.jsx  LoadingSpinner.jsx  ResultsPanel.jsx  WorkflowTimeline.jsx
mock_data/: .gitkeep
scripts/: __init__.py  build_vector_index.py  generate_synthetic_data.py  import_data_to_db.py  migrate_to_graph.py  test_graph_rag_usage.py  test_phase2.sh
tests/: __init__.py  test_benefit_verification.py  test_graph_rag.py  test_monitoring.py  test_vector_search.py
